@@ -10,4 +10,5 @@ Guo Sijie
 Jonathan Payne
 Michael Rose
 Michael Stack
+Nicolas Thiébaud
 Shrijeet Paliwal
