@@ -4,6 +4,7 @@ HBase Async - User visible changes.
 
   - Fixed an RPC serialization bug when batching whole-row deletes.
     See issue #25.
+  - Scanners can now scan multiple qualifiers at a time (#35).
 
 * Version 1.3.2 (2012-07-10) [2af9f55]
 
